--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --hero-background: #2e2f42;
   --white-background: #ffffff;
   --modal-background: #fcfcfc;
+  --bg-gradient: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
 }
 
 h1,
@@ -37,6 +38,8 @@ header {
   border-style: solid;
   border-width: 0 0 1px 0;
   border-color: var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -82,7 +85,6 @@ header {
   display: flex;
   align-items: center;
   width: 100%;
-  
 }
 
 .logo {
@@ -108,7 +110,6 @@ header {
   align-items: flex-start;
   gap: 40px;
   gap: 40px;
-  
 }
 
 .header-link {
@@ -157,6 +158,11 @@ header {
   background-color: var(--hero-background);
 }
 
+.footer-container {
+  display: flex;
+  gap: 120px;
+}
+
 .part-footer-logo {
   color: var(--light);
 }
@@ -170,6 +176,46 @@ header {
   color: var(--light);
 }
 
+.footer-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white-background);
+}
+
+.footer-soc-list {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+}
+
+.footer-soc-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--primary-brand);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: var(--success);
+}
+
+.team-soc-icon {
+}
+
+.team-soc-item {
+}
+
 /*? PAGE 1 ?*/
 /** ------- HERO------- **/
 
@@ -180,9 +226,16 @@ header {
 }
 
 .hero {
+  width: 1440px;
+  height: 600px;
+  margin: 0 auto;
   background-color: var(--hero-background);
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: var(--bg-gradient), url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
@@ -237,6 +290,17 @@ header {
 
 .advantages-item {
   width: calc((100% - 72px) / 4);
+}
+
+.advantages-link {
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  background-color: var(--light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .advantages-subtitle {
@@ -332,6 +396,83 @@ header {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.team-soc-item {
+  width: 40px;
+  height: 40px;
+}
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--primary-brand);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--pressed-state);
+}
+
+.team-soc-icon {
+  fill: var(--light);
+}
+
+/** ------- CUSTOMERS------- **/
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.customers-title {
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--dark);
+}
+.customers-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.customers-item {
+  width: 168px;
+  height: 88px;
+}
+.customers-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--subtle-text);
+  border-radius: 4px;
+}
+.customers-icon {
+  fill: var(--subtle-text);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: var(--pressed-state);
+}
+
+.customers-link:hover > .customers-icon,
+.customers-link:focus > .customers-icon {
+  fill: var(--pressed-state);
 }
 
 /*? PAGE 2 ?*/
@@ -393,6 +534,12 @@ header {
 .portfolio-item {
   width: 360px;
   height: 420px;
+}
+
+.portfolio-item:hover,
+.portfolio-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-border {
