--- a/css/styles.css
+++ b/css/styles.css
@@ -88,12 +88,12 @@ header {
 }
 
 .logo {
+  display: flex;
+  align-items: center;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-brand);
@@ -109,18 +109,17 @@ header {
   flex-direction: row;
   align-items: flex-start;
   gap: 40px;
-  gap: 40px;
 }
 
 .header-link {
+  padding-top: 24px;
+  padding-bottom: 24px;
   display: inline-block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark);
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .header-link:hover,
@@ -129,8 +128,8 @@ header {
 }
 
 .address {
-  font-style: normal;
   margin-left: auto;
+  font-style: normal;
 }
 
 .header-address-list {
@@ -199,21 +198,15 @@ header {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: var(--primary-brand);
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--primary-brand);
 }
 
 .footer-soc-link:hover,
 .footer-soc-link:focus {
   background-color: var(--success);
-}
-
-.team-soc-icon {
-}
-
-.team-soc-item {
 }
 
 /*? PAGE 1 ?*/
@@ -226,8 +219,8 @@ header {
 }
 
 .hero {
-  width: 1440px;
-  height: 600px;
+  max-width: 1440px;
+  max-height: 600px;
   margin: 0 auto;
   background-color: var(--hero-background);
   padding-top: 188px;
@@ -297,10 +290,10 @@ header {
   height: 112px;
   border-radius: 4px;
   margin-bottom: 8px;
-  background-color: var(--light);
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--light);
 }
 
 .advantages-subtitle {
@@ -316,7 +309,6 @@ header {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  /* max-width: 264px; */
 }
 
 /** ------- WORK------- **/
@@ -337,9 +329,9 @@ header {
 
 .work-title {
   margin-bottom: 72px;
+  text-align: center;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--dark);
@@ -348,9 +340,9 @@ header {
 /** ------- TEAM------- **/
 
 .team {
-  background-color: var(--light);
   padding-top: 120px;
   padding-bottom: 120px;
+  background-color: var(--light);
 }
 
 .team-list {
@@ -374,27 +366,27 @@ header {
 
 .team-title {
   margin-bottom: 72px;
+  text-align: center;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--dark);
 }
 
 .team-subtitle {
+  text-align: center;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--dark);
 }
 .team-text {
   margin-top: 8px;
+  text-align: center;
   font-size: 16px;
   line-height: 1.5;
-  text-align: center;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
@@ -412,11 +404,11 @@ header {
 .team-soc-link {
   width: 100%;
   height: 100%;
-  border-radius: 50%;
-  background-color: var(--primary-brand);
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 50%;
+  background-color: var(--primary-brand);
 }
 
 .team-soc-link:hover,
@@ -436,9 +428,9 @@ header {
 }
 .customers-title {
   margin-bottom: 72px;
+  text-align: center;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--dark);
