--- a/css/styles.css
+++ b/css/styles.css
@@ -523,13 +523,12 @@ header {
   gap: 48px 24px;
 }
 
-.portfolio-item {
-  width: 360px;
-  height: 420px;
+.portfolio-link {
+  display: block;
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
